# ChangeLog for www-apps/mediawiki
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/mediawiki/ChangeLog,v 1.251 2013/12/13 09:26:43 ago Exp $

  13 Dec 2013; Agostino Sarubbo <ago@gentoo.org> mediawiki-1.19.9.ebuild,
  mediawiki-1.20.8.ebuild, mediawiki-1.21.3.ebuild:
  Stable for ppc, wrt bug #491278

  10 Dec 2013; Agostino Sarubbo <ago@gentoo.org> mediawiki-1.19.9.ebuild,
  mediawiki-1.20.8.ebuild, mediawiki-1.21.3.ebuild:
  Stable for x86, wrt bug #491278

  10 Dec 2013; Agostino Sarubbo <ago@gentoo.org> mediawiki-1.19.9.ebuild,
  mediawiki-1.20.8.ebuild, mediawiki-1.21.3.ebuild:
  Stable for amd64, wrt bug #491278

*mediawiki-1.22.0 (10 Dec 2013)

  10 Dec 2013; Tim Harder <radhermit@gentoo.org> +mediawiki-1.22.0.ebuild:
  Version bump.

*mediawiki-1.21.3 (15 Nov 2013)
*mediawiki-1.20.8 (15 Nov 2013)
*mediawiki-1.19.9 (15 Nov 2013)

  15 Nov 2013; Tim Harder <radhermit@gentoo.org> +mediawiki-1.19.9.ebuild,
  +mediawiki-1.20.8.ebuild, +mediawiki-1.21.3.ebuild:
  Security bumps (bug #491278).

  15 Sep 2013; Markus Meier <maekke@gentoo.org> mediawiki-1.21.2.ebuild:
  add ~arm, bug #377135

  05 Sep 2013; Tim Harder <radhermit@gentoo.org> -mediawiki-1.19.7.ebuild,
  -mediawiki-1.20.6.ebuild, -mediawiki-1.21.1.ebuild:
  Remove old.

  04 Sep 2013; Agostino Sarubbo <ago@gentoo.org> mediawiki-1.19.8.ebuild,
  mediawiki-1.20.7.ebuild, mediawiki-1.21.2.ebuild:
  Stable for amd64, wrt bug #483594

  04 Sep 2013; Agostino Sarubbo <ago@gentoo.org> mediawiki-1.19.8.ebuild,
  mediawiki-1.20.7.ebuild:
  Stable for ppc, wrt bug #483594

  04 Sep 2013; Agostino Sarubbo <ago@gentoo.org> mediawiki-1.19.8.ebuild,
  mediawiki-1.20.7.ebuild, mediawiki-1.21.2.ebuild:
  Stable for x86, wrt bug #483594

*mediawiki-1.21.2 (04 Sep 2013)
*mediawiki-1.20.7 (04 Sep 2013)
*mediawiki-1.19.8 (04 Sep 2013)

  04 Sep 2013; Tim Harder <radhermit@gentoo.org> +mediawiki-1.19.8.ebuild,