@@ -1,38 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX postinstall-1.18-en.txt 2611 SHA256 8388d74e84d63c40cbc697e25639be5f07108ecc13497346fccf9d89ab0484eb SHA512 2b6a0e00160c15466bf70189499816d18a5ea06f040ed79f2361842be93a584ea19033170dc59c1d78c590da85223a61b8d04730084e60bc7906648f2532578b WHIRLPOOL 254b014ac9a7cf431958ade7827afadbf7e48ec255e1ea39e7ac3fa091f7d321376b760dad39d0be3af3a6cb342aaeac9d4e2329816bf3c6b3e4e55e1ac05d4b
 AUX postupgrade-1.16-en.txt 1514 SHA256 5d7aedb456fbff83adf0335ca5e1c99062e694e178bc93d749615ff63dc883f4 SHA512 58d11cdf8daaa2ee62ca64dfeddad3ef2d10feac5b93b51f96e5802dd2915c3d969b8e99d059e79a9b62386ae70a7690db3c4e4d248501e839769bc7f24d2dd5 WHIRLPOOL f17f927bfedfdc502c752276c0876bebe771918242be98de32d5fc51003a054132f4f6b4a16caeca293c1ebb44c12bc322eee5efcefda228ea97136b00c6e1ee
-DIST mediawiki-1.19.8.tar.gz 18553824 SHA256 ef7f0baef5e26860b50fa503119626885bef7e9b01e1eff30cd09806b2b2800a SHA512 cb9ea9d96ec36febc0debf74386078d1bd01a163176b5ccd99b87d237c3455c849ebe2a95a6f2bf322f1de71085badb8e891a69858c227cd8fff49b66de913df WHIRLPOOL 3340ffda746cfe1adc4adb609c72fcb400ba9faf603e982efdbe14aa2826315c090c05e745d44046c8d7d4ceea0973f034f599caf4c3485310932c3d82905d82
 DIST mediawiki-1.19.9.tar.gz 18705029 SHA256 1fdc86c4d0c0a4d92016db627e2ebabb4a8db962f89601b013bcf353887e76ca SHA512 884190566dedf5188ba11a1729638ab1bc5256b9132a99608e21d900932a36f29b4d170e7d50d08bbd5c4484bd2158332800f7787dd437caeb61fd1c1d8fbaa1 WHIRLPOOL 5a8618c7c6c41d244becad8b7ddba15b082179139e65ef96652fb891edf5fbaa17559f74c6cab85a2d930686256f95f335446c4b61d1dcf72636ba45a67a562c
-DIST mediawiki-1.20.7.tar.gz 18556660 SHA256 b53bcbf3b6e3dcd810ab73143c0028beb88547bcc7766a55f532703b7015b431 SHA512 333c25f39f54dbdd6c5bf0269e2da253206990730b8eaa305bd935f5d233725c6c63393073ae28bf766a9fc2e01b3193313a4b01d020058ebdbb59a04d069fb6 WHIRLPOOL 5f8349fefd41521d0cf1a731120cef5e1162df6f064d23b1ea7ae534e023111d4bbb3420af02ddf21bd6a9404b577a14ae17f7ac8eb0385acddaa31772d2e71c
 DIST mediawiki-1.20.8.tar.gz 18717863 SHA256 4f1d6b0155e54dc8b6003b5af70c5b98ccc62181f640ec58dcf72d677781d579 SHA512 c1c93cb5a5f643e5018a3f79b8db8bb6f4e9bbe08f054975fcbf8ee8dbc9f42f6d4bcc1427db9bf9645f997af8e12aa479bbcccada3d30c8ec1eb943f9e5cb05 WHIRLPOOL 23515b0b82ed27f32ea7da6e0ee92ff3c42eb023db124595772b2f195072c18b909ba4ccf2e7066e968b2f2182743584971943921312ff7b9dda37e4d12b68a6
-DIST mediawiki-1.21.2.tar.gz 20426538 SHA256 3ba24177d0952631dc6397bd49247f3d8d2b7798f832aaed0fc37d7511fc6355 SHA512 bc30af58086e27d914bfc2019bb527630bb4f5ae5dcf4fcbf1e771d9d42722e862c0852de693daa4b3326e00209525acc6d270b66ed0fa66bd5461cffb536d70 WHIRLPOOL 84c38128b9363228677e1222fb6008bfd55c9e62731ff5f207d70a1bc717e6b05740c47f21cd4be92f30d62d001400af5457ff3ccd43ae4acb6ebd3ccc6916da
 DIST mediawiki-1.21.3.tar.gz 20613745 SHA256 d1e61baa112150161e37a9dae397e37d4b27b79f93127bd3e55b0302ae0a46fd SHA512 869ec541cd3835f9fbaf8299b17e5f7f56582777de70cdaf3d6a1783601e67492631d3773151f80a1584e5d5e29f58daed1818d9618eee4ed07dfd060198167a WHIRLPOOL 343a01730d9bda8cdf9fa64504ab0a297172179fd03168f414d92ba84e954cccb0ea9c161f2073bb6126272621201fbc62b9888dd840c31a6ae2f8f747778f11
 DIST mediawiki-1.22.0.tar.gz 20691072 SHA256 0ba647c6b2ffc4e8728a25718a16477f38fbac585cd5ec04eb4d148454f98c87 SHA512 000e514830f58229e970dc51024da24c849c500e92a66ab29fe7fc4583d5056bec8833299c692dd9c73d9af4f2502fce25d760b448c69e127458dd3fe9179578 WHIRLPOOL 0f54a533187f766cf73fa2205c6a8223a074722c9ee5fbeba7004b67bbe8b1ed3b1050c7a1ade88eeff64014b57c25cd7185591e9f1ebc36245e7dc302481e86
-EBUILD mediawiki-1.19.8.ebuild 2491 SHA256 18e015ea5a154b6bb50c9e2454cc1dde7b60f990129383ff4204c2ba292f2797 SHA512 c165b49ac04eaeb8eefdfed8b825120d90a97e1bbdb519573ddddedc0c1bbb7f78271b667a8ee3dd15ad878283ea43c7fc0fec3ae02abd34dee9c8677ddac918 WHIRLPOOL dd5f56bc766252ce214d146948355b4dfcbd8888647f30c9383e2860b5e6d46707210f838cf2b8666c28338b9e7b9af4f10c55860b739489fabafbfa82d67616
 EBUILD mediawiki-1.19.9.ebuild 2491 SHA256 a1b9ab652b81848f45aee168169052026d71192d72d2c0373bd3c42a5a345ffc SHA512 0d1bdacc5ef26aa120d538d40a4ea34b1b57e19a2baa2aafd05582463687fabfe8896ca8ddffbe174e3b3dc2bcf1bed1811f09a2dfe600e53a47c4c1934385a9 WHIRLPOOL 11cd211a6a837ebeb2d05104905d30303704b1af1ee126df1fa21eefab4f57f5c2a07aedfb847fc8f0e2823df78c140b69049945e753c78a2bee543c909c583b
-EBUILD mediawiki-1.20.7.ebuild 2495 SHA256 474a27942d4920f66ed2fabc62b0fdab18968abfef7a9557c3324e5c14929daf SHA512 adad81003a76db8642b32074e880c4a7c05ede78d09b7220043c821153c226295b10a32d72567c2228000acc5ebdc71bc223186b84442e463f69909dd6daf4f6 WHIRLPOOL 9371eacba647e3c3a86e306cd8deab3cf14355f02b16eaf297a750e02ea8963672c744134032651a47656b08f768acff0d00fba3dd8c4e02df652c17c833b53b
 EBUILD mediawiki-1.20.8.ebuild 2495 SHA256 1ecfea918b30285ed17e6dd3d55efbf7f607eefac9f774ef73d3e2cbf1dd62db SHA512 83da8d177222b1f3c5d53459ef832f553a4f76b7e8d7996798f0b4078713a689ea038060e89168bc7dec735cd9c3656421185037a3a97400ce41a6f695b7ff4b WHIRLPOOL 4e0201bde6c02703032712b35f4fefdec325e29224b069d82c60dd524c51325f48a76226a7cefcbdc9bc6d3cd54b3ac179afed413074ad8bd5924d1c515497a0
-EBUILD mediawiki-1.21.2.ebuild 2503 SHA256 faf529600892c71e1d73f93a29eb4ddb6110e2f1d1dc04900cc9c32540fcf5d8 SHA512 42c93a1cb959576309614aa0a9cc85c45fd31d89b390f69d940932849a71146109d2c964b6ebd23db4483e2c9a3c9d74c13458818fd468ae3ab87d1d246bdf63 WHIRLPOOL fca66d39aa8ce8529b8c280912246673682f5568c32c8eb5dd001bb16f98f7d5c3a2b416024bd625713f83d01cdcdc8c19eb24f7a06379a32d04a9b3c1459778
 EBUILD mediawiki-1.21.3.ebuild 2500 SHA256 0e3dd54bba22a4ffd4f2ac9117bfde15b2909b8d5491e8dc84b844c738f72cc1 SHA512 1cdc495d6548aeb16b8750b794462c024417f0e71e27ed836ec2b9c115ff31badb4a7854d3d4a2055d37d48cb54105cbd10476f98f92d0b7155af7f6f6af422d WHIRLPOOL da5da44303262bf93c69dc837cc48ed946c2b625f21344c933806bc1375d15ea9f441b93a069b172369374b9591a69a5b82fedd7d058d2f16104ebfc095eb75d
 EBUILD mediawiki-1.22.0.ebuild 2514 SHA256 410244638d3201d80309a8fb8cc6736018fe96c21f7316486062fae08dc4776b SHA512 9a5cd51c7dbbd803d5a808926669ffebb8561dff9e1b2a99bb9210d16ac13017221efb1ebe497be641b956cf633ba225c8e22fc58f73a89fd3f9943b9a9d4e30 WHIRLPOOL 91e8549606a669b14030e8dc2f8b22732185b5993e2b3480b9d2c1d13a6c1ca9a5c4f0cfd944cff261d6ff6e4fbb96d5d67d6c2f071d3ead343cc1e34e9c223d
-MISC ChangeLog 40465 SHA256 a382e3ce3aa8754a783d8a0dfd773804e1b83665bc2161db3a084b13798539e2 SHA512 59974ed709e5ff019de4102d9babb9e4944e4801099570e926b25fce5b25b23bf83cd8ffc2b71e61ebf04a9f830adedb63100aa0ac0394d7195db1d21354f04c WHIRLPOOL 9a2a9b68c6001093e04e3479ea873646759e023781199b97f2dfb2f42c983e5da9164d689b71e96a9da109002bb82184265a23d966009ae11f824b3252ede2bc
+MISC ChangeLog 40615 SHA256 c6058c5cecf53d59cb94dee97c466c3e522e2aeeb0310a60ac41e9c8b719c098 SHA512 9a535de9344d119bf32311f17d9629e0391c82f79758c9f6138b423d0a0d1c9fba573f673ae809d3e1d226f050ac4a84dbf6d368ac8c4e3bb889e9beee7d2f71 WHIRLPOOL 012b90ce2de9e1b76e805bb0f3e5a612a020c7a7cd538944d863423f682b8e7f5cc444c28c8b0f80a2dbca90ff38549b226bc066d2e1df6f5bb39cedfec1ffff
 MISC metadata.xml 161 SHA256 9cd891fcf0af580e98b62d2f4ded9e53671599f5a7aafd5dce692b996d2a83f4 SHA512 da8733f12ac4bebcfa485138fd9880683c1196efc0312a588ffce412ed14c1dd831e005129b6598d027af44d381fceb844453a433d0c982348e21f2d9c49f52e WHIRLPOOL 2b56ebef4f0870596c32c35c96e6dfbc911f6a3d8fe0e8c463df76dfa73dde112948c814b9a9ee996b7d71a85e4a723033ee3b92f4cde0f31d0770404d7dba61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCgAGBQJSqtLTAAoJELp701BxlEWfb2QP/2nRivsMtptnefU52alUl7Ah
-OPz0KgSjRu/Sv4DMgnaVfuyWqn/b8fkgQxX+2CMLObTa4LZl522YFLpK0J0eSnqb
-Vax/ICBE2ru0iNF9kfGzFin6rGEMfYzoFPxC4lLGca1WzMT24IA7V6jW1h1AXTou
-lpRgkyQ2+TGu4/IG9oTUaZGMMpVLD9TceHb63+7gP2LPVYHIEOaifnZhipd8RUHR
-JjKOQNZEBXrf2Wu/8XfuZ5Rv+ZRonWX0SoxMP1ElLQOpFGHSiipuITul7I65p+x3
-aTP1GQpm/9WWWFxQWQS7n7eizXP2UdK4yHwYUke/AGImz3KXkIf6q5Fj2NHQCGRD
-vEpJ3D9VM1xMY/ftGpqPU0sk/OyeN8hAgQ9IA7rIIodQrMHch3Lq27Bkkt3t7CTu
-UGQI+p3xF73M6mlQnaHwY0GfZ2Y4KcVR0/Ftwil0RHTmmmuuubePmqKtC/cJhukp
-u6eAvLGoXxGaNHOq83Ry3eBy04ncFRw8yCA41ul1yRILYBSPjq7f6J/UradNhDZQ
-/XPaDTF1gKeBxf7QvRUre6JUB9xL/gvP455DK1GsTcpKHliCurjHGQIUlJBUq1+w
-IIkghNbfYc/PLZYFlI0SEgT5Xaac+csQcju4bHKEfSNNYaxCrcNpxzkw4Fs6ijDv
-29lMCcuf0KphKKsd5PF3
-=I8Xv
+iQEcBAEBCAAGBQJSq018AAoJEEqz6FtPBkyjYHgH/2Icn5zEdJGnlwtYe1NAry0K
+PMSYnSyadYksfNBoHQjGbZWKvA/zBDmaVs0CBGEueh1dZmowut8Cxo2WnRwouuUJ
+zJPJ+Y7FwCwJrjLo+FiHXfax3S8Rniw4U2xmm1RsfBpbyjajIQ4H9X7s4dz160VG
+HT3/CBoiqYTt4Uw2wP6I92OzoLrYiSI/gqTxAyipskpoVzyUaxjg8texdYB7h82I
+P6vgBr52jyIIuWFfHX+3XF46yAWr7LNxnNWPbo2QBoZTY7kv4iIz4qQ6y898z98v
+CtYiBGvbtUcMZFeTe0vFVE3hcAKZ/reJqmGUTmP7KyCumeXJCK2uLeGd/3ZKHEU=
+=j+4f
 -----END PGP SIGNATURE-----
