@@ -1,6 +1,10 @@
 # ChangeLog for www-apps/mediawiki
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/mediawiki/ChangeLog,v 1.251 2013/12/13 09:26:43 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/mediawiki/ChangeLog,v 1.252 2013/12/13 18:10:00 radhermit Exp $
+
+  13 Dec 2013; Tim Harder <radhermit@gentoo.org> -mediawiki-1.19.8.ebuild,
+  -mediawiki-1.20.7.ebuild, -mediawiki-1.21.2.ebuild:
+  Remove old.
 
   13 Dec 2013; Agostino Sarubbo <ago@gentoo.org> mediawiki-1.19.9.ebuild,
   mediawiki-1.20.8.ebuild, mediawiki-1.21.3.ebuild:
